--- a/index.css
+++ b/index.css
@@ -5,8 +5,48 @@ body {
 .container {
     display: flex;
     justify-content: space-around;
+    background: #1B244A; 
+    border: 2px solid #000000; 
+    border-radius: 5px;
+    margin-left: auto; 
+    margin-right: auto; 
+    margin-top: 100px; 
+    padding-top: 50px; 
+    padding-bottom: 50px; 
+    padding-left: 50px; 
+    padding-right: 50px; 
+    width: 500px; 
 }
 
-h1, h3 {
+h1 {
+    color: #F94F6D; 
+    font-family: 'Cursed Timer ULiL', sans-serif;
     text-align: center;
+    border: none;
+    border-radius: 5px;
+    padding: 25px;
+    background-color: #080001; 
+    font-size: 50px; 
+    width: 70px;
+}
+
+h3 {
+    color: #EEEEEE; 
+    font-family: Verdana, sans-serif;
+    font-size: 30px; 
+    padding-left: 10px;
+}
+
+button {
+    border: 1px solid #9AABD8; 
+    font-family: 'Cursed Timer ULiL', sans-serif;          
+    font-size: 15px;         
+    border-radius: 3px;
+    padding-top: 8px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    background-color: transparent;
+    color: #9AABD8; 
+    margin-right: 5px;
+    margin-left: 5px;
 }
