--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@ h1 {
     padding-right: 25px;
     padding-left: 25px;
     background-color: #080001; 
+    margin-left: 5px;
     font-size: 50px; 
     width: 70px;
 }
@@ -36,7 +37,7 @@ h1 {
 h3 {
     color: #EEEEEE; 
     font-family: Verdana, sans-serif;
-    font-size: 30px; 
+    font-size: 31px; 
     padding-left: 10px;
 }
 
