--- a/index.css
+++ b/index.css
@@ -6,15 +6,12 @@ body {
     display: flex;
     justify-content: space-around;
     background: #1B244A; 
-    border: 2px solid #000000; 
     border-radius: 5px;
     margin-left: auto; 
     margin-right: auto; 
     margin-top: 100px; 
-    padding-top: 50px; 
-    padding-bottom: 50px; 
-    padding-left: 50px; 
-    padding-right: 50px; 
+    padding: 50px;
+    padding-bottom: 60px;
     width: 500px; 
 }
 
@@ -22,7 +19,6 @@ h1 {
     color: #F94F6D; 
     font-family: 'Cursed Timer ULiL', sans-serif;
     text-align: center;
-    border: none;
     border-radius: 5px;
     padding-top: 25px;
     padding-bottom: 20px;
